Fix content alignment if short content amount

--- a/site/assets/4.0/scss/_toc.scss
+++ b/site/assets/4.0/scss/_toc.scss
@@ -47,6 +47,7 @@
             display: grid;
             grid-template-areas: "lead toc" "content toc";
             grid-template-columns: 3.25fr 1fr;
+            grid-template-rows: auto 1fr;
         }
         @include media-breakpoint-up(xl) {
             grid-template-columns: 4fr 1fr;
